force-app/main/default/objects/AO_Program_Form_Map__c.object
<CustomObject>
    <description>Object to relate forms to programs, this allows to enable single forms to multiple programs</description>
    <fields>
        <fullName>AO_Enable_on_Condition__c</fullName>
        <description>Select Status value on which Subsequent fields will be enabled</description>
        <inlineHelpText>Please populate this value when Sequence is selected as &quot;Subsequent&quot;</inlineHelpText>
        <label>Enable on Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AO_Application_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AO_Encoded_Id__c</fullName>
        <description>This field stores encoded Id of Program form map</description>
        <label>Encoded Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AO_Form_Name__c</fullName>
        <description>Display Form&apos;s display name</description>
        <formula>AO_Form__r.AO_Form_Display_Name__c</formula>
        <label>Form Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AO_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look uop field to Form</description>
        <label>Form</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AO_Form__c.AO_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AO_Form__c</referenceTo>
        <relationshipLabel>Program Form Map</relationshipLabel>
        <relationshipName>Program_Form_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AO_Program__c</fullName>
        <description>Program lookup</description>
        <label>Program</label>
        <referenceTo>AO_Program__c</referenceTo>
        <relationshipLabel>Program Form Map</relationshipLabel>
        <relationshipName>AO_Program_Form_Map</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AO_Sequence__c</fullName>
        <description>Primary - AOS Form for the program
        Susequent - Enables after Primary form status change
        Ad-hoc - Enables by Admin
        NCP - NCP Forms by Finance
        Offer Letter - Send and Offer Letter to Student for acceptance</description>
        <inlineHelpText>Primary - AOS Form for the program
Susequent - Enables after Primary form status change
Ad-hoc - Enables by Admin
NCP - NCP Forms by Finance
Offer Letter - Send and Offer Letter to Student for acceptance</inlineHelpText>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ad-hoc</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Subsequent</fullName>
                </value>
                <value>
                    <fullName>NCP</fullName>
                </value>
                <value>
                    <fullName>Offer Letter</fullName>
                </value>
                <value>
                    <fullName>Multi Submit Form</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_URL__c</fullName>
        <description>Site Url to be published on Monash abroad website</description>
        <formula>IF( $Organization.Id = &apos;00D280000016GQ6&apos;, 
  &apos;https://connect.monash.edu/s/loginredirect?siteLabel=abroad&amp;redirectPath=/s/form?fpid=&apos;+AO_Encoded_Id__c
 ,SUBSTITUTE(
        LEFT($Api.Partner_Server_URL_600,FIND(&quot;/services&quot;, $Api.Partner_Server_URL_600)),
        &apos;salesforce.com/&apos;,
        &apos;site.com/askmonash/s/loginredirect?siteLabel=abroad&amp;redirectPath=/s/form?fpid=&apos;+AO_Encoded_Id__c
  )
)</formula>
        <label>Site URL</label>
        <type>Text</type>
    </fields>
    <label>Program Form Map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AO_Program__c</columns>
        <columns>AO_Form__c</columns>
        <columns>AO_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PFM-{0000000}</displayFormat>
        <label>Program Form Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Form Map</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AO_VALIDATE_ENABLE_CONDITION</fullName>
        <active>true</active>
        <description>Validates the values selected in Enable condition on field for Subsequent forms</description>
        <errorConditionFormula>AND( 
NOT(
OR(
ISPICKVAL(AO_Enable_on_Condition__c,&apos;Successful&apos;) ,ISPICKVAL(AO_Enable_on_Condition__c,&apos;Accepted&apos;))),
ISPICKVAL( AO_Sequence__c , &apos;Subsequent&apos;))</errorConditionFormula>
        <errorDisplayField>AO_Enable_on_Condition__c</errorDisplayField>
        <errorMessage>Please select Successful or Accepted</errorMessage>
    </validationRules>
</CustomObject>